--- a/redd/src/App.css
+++ b/redd/src/App.css
@@ -1,4 +1,8 @@
-#root {
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; */
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
