--- a/redd/src/index.css
+++ b/redd/src/index.css
@@ -2,6 +2,8 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+/* @import "@arcgis/core/assets/esri/themes/dark/main.css" */
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
