--- a/redd/src/index.css
+++ b/redd/src/index.css
@@ -2,7 +2,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@import "@arcgis/core/assets/esri/themes/dark/main.css"
+@import "@arcgis/core/assets/esri/themes/dark/main.css";
+@import 'react-date-picker/dist/DatePicker.css';
+@import 'react-calendar/dist/Calendar.css';
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
